fix horizontal scrolling

--- a/front/src/styles/base.scss
+++ b/front/src/styles/base.scss
@@ -1,3 +1,8 @@
+body {
+  @include mobile() {
+    overflow-x: hidden;
+  }
+}
 .entry-content {
   .title {
     font-weight: $bold;
